--- a/Vet.Clinic.Mvc/Views/Web.config
+++ b/Vet.Clinic.Mvc/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="Vet.Clinic.Mvc" />
+        <add namespace="VetClinic.Mvc" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
