--- a/Vet.Clinic.Mvc/packages.config
+++ b/Vet.Clinic.Mvc/packages.config
@@ -18,9 +18,15 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net471" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net471" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net471" developmentDependency="true" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net471" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net471" />
   <package id="Modernizr" version="2.6.2" targetFramework="net471" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net471" />
   <package id="Respond" version="1.2.0" targetFramework="net471" />
+  <package id="Unity.Abstractions" version="3.3.0" targetFramework="net471" />
+  <package id="Unity.Container" version="5.7.0" targetFramework="net471" />
+  <package id="Unity.Mvc" version="5.0.13" targetFramework="net471" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net471" />
   <package id="WebGrease" version="1.5.2" targetFramework="net471" />
 </packages>
