--- a/VetClinic!Mvc/VetClinic!Mvc.csproj
+++ b/VetClinic!Mvc/VetClinic!Mvc.csproj
@@ -125,11 +125,15 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityMvcActivator.cs" />
+    <Compile Include="Attributes\AuthenticationAttribute.cs" />
+    <Compile Include="Attributes\AuthorizationAttribute.cs" />
+    <Compile Include="Attributes\LogActionAttribute.cs" />
     <Compile Include="Controllers\PatientsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\NewPatientModel.cs" />
+    <Compile Include="Models\NewPatientModelBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -208,7 +212,6 @@
     <Content Include="Views\Patients\Patients.cshtml" />
     <Content Include="Views\Patients\Success.cshtml" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config">
       <SubType>Designer</SubType>
